--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,7 @@
 	
     <target name="compile">
         <mkdir dir="${build.dir}"/>
+    	<copy file="src/log4j.properties" todir="${build.dir}" />
         <javac srcdir="src" destdir="${build.dir}">
         	<classpath>
         		<path refid="classpath"/>
@@ -70,7 +71,7 @@
 		<delete file="${dist.file}" failonerror="false" />
 		
 		<jar destfile="${dist.file}">
-			<fileset dir="${build.dir}" includes="**/*.class" />
+			<fileset dir="${build.dir}" includes="**/*.*" />
 		</jar>
 		
 		<copy todir="${dist.dir}">
